--- a/Views/Invites/Create.cshtml
+++ b/Views/Invites/Create.cshtml
@@ -4,11 +4,6 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
-
-<h4>Invite</h4>
-<hr />
-
 <div class="col-lg-6 col-md-12">
     <div class="card custom-card">
         <div class="card-body">
@@ -17,6 +12,13 @@
                 <p class="text-muted card-sub-title">Invite a new user to join your Bug Tracker company.</p>
             </div>
             <form asp-action="Create">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <input type="hidden" asp-for="Id" />
+                <input type="hidden" asp-for="InviteDate" />
+                <input type="hidden" asp-for="JoinDate" />
+                <input type="hidden" asp-for="CompanyToken" />
+                <input type="hidden" asp-for="IsValid" />
+
                 <div class="row row-xs align-items-center mg-b-20">
                     <div class="col-md-4">
                         <label class="mg-b-0">Email</label>
@@ -56,7 +58,7 @@
                         <label class="mg-b-0">Message</label>
                     </div>
                     <div class="col-md-8 mg-t-5 mg-md-t-0 my-2">
-                        <textarea asp-for="Message" multiple="multiple" class="form-control"></textarea>
+                        <textarea asp-for="Message" class="form-control editor"></textarea>
                     </div>
                 </div>
                 <div class="form-group row justify-content-end mb-0">
@@ -70,82 +72,14 @@
     </div>
 </div>
 
-
-@*<h1>Create</h1>
-
-<h4>Invite</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="InviteDate" class="control-label"></label>
-                <input asp-for="InviteDate" class="form-control" />
-                <span asp-validation-for="InviteDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="JoinDate" class="control-label"></label>
-                <input asp-for="JoinDate" class="form-control" />
-                <span asp-validation-for="JoinDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CompanyToken" class="control-label"></label>
-                <input asp-for="CompanyToken" class="form-control" />
-                <span asp-validation-for="CompanyToken" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="InviteeEmail" class="control-label"></label>
-                <input asp-for="InviteeEmail" class="form-control" />
-                <span asp-validation-for="InviteeEmail" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="InviteeFirstName" class="control-label"></label>
-                <input asp-for="InviteeFirstName" class="form-control" />
-                <span asp-validation-for="InviteeFirstName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="InviteeLastName" class="control-label"></label>
-                <input asp-for="InviteeLastName" class="form-control" />
-                <span asp-validation-for="InviteeLastName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Message" class="control-label"></label>
-                <input asp-for="Message" class="form-control" />
-                <span asp-validation-for="Message" class="text-danger"></span>
-            </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="IsValid" /> @Html.DisplayNameFor(model => model.IsValid)
-                </label>
-            </div>
-            <div class="form-group">
-                <label asp-for="CompanyId" class="control-label"></label>
-                <select asp-for="CompanyId" class ="form-control" asp-items="ViewBag.CompanyId"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="ProjectId" class="control-label"></label>
-                <select asp-for="ProjectId" class ="form-control" asp-items="ViewBag.ProjectId"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="InvitorId" class="control-label"></label>
-                <select asp-for="InvitorId" class ="form-control" asp-items="ViewBag.InvitorId"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="InviteeId" class="control-label"></label>
-                <select asp-for="InviteeId" class ="form-control" asp-items="ViewBag.InviteeId"></select>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
-</div>*@
-
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+
+    <script>
+        ClassicEditor
+            .create(document.querySelector('.editor'))
+            .catch(error => {
+                console.error(error);
+            });
+    </script>
 }
