--- a/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -24,14 +24,16 @@
                 <p>@btUser.FullName</p>
             </div>
         </div>
-        <div class="row">
-            <div class="col-md-6">
-                <form id="profile-form" method="post" enctype="multipart/form-data">
-                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+        <form id="profile-form" method="post" enctype="multipart/form-data">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="row">
+                <div class="col-12 col-lg-6">
                     <div class="form-floating">
                         <input asp-for="Username" class="form-control" disabled />
                         <label asp-for="Username" class="form-label"></label>
                     </div>
+
                     <div class="form-floating my-2">
                         <input asp-for="Input.FirstName" class="form-control" aria-required="true" />
                         <label asp-for="Input.FirstName"></label>
@@ -47,6 +49,8 @@
                         <label asp-for="Input.PhoneNumber" class="form-label"></label>
                         <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
                     </div>
+                </div>
+                <div class="col-12 col-lg-6">
                     <div class="form-group">
                         <label asp-for="Input.ImageFileData" style="width: 100%;">Upload a Profile Image</label>
 
@@ -58,10 +62,12 @@
 
                         <span asp-validation-for="Input.ImageFormFile" class="text-danger"></span>
                     </div>
-                    <button id="update-profile-button" type="submit" class="btn btn-lg btn-primary rounded-pill my-2">Save</button>
-                </form>
+                    <div class="d-flex justify-content-end">
+                        <button id="update-profile-button" type="submit" class="btn btn-lg btn-primary rounded-pill my-2">Save</button>
+                    </div>
+                </div>
             </div>
-        </div>
+        </form>
     </div>
 </div>
 
