--- a/Views/Projects/AllProjects.cshtml
+++ b/Views/Projects/AllProjects.cshtml
@@ -8,119 +8,113 @@
     ViewData["Title"] = "All Projects";
 }
 
-<div class="container mt-5">
-    <div class="card mb-3">
-        <div class="row g-0">
-            <div class="col-md-12">
-                <div class="card-body">
-                    <h1>All Projects</h1>
+<!-- DataTable -->
+<link rel="stylesheet" href="~/vendors/dataTable/datatables.min.css" type="text/css">
 
-                    <p>
-                        <a asp-action="Create">Create New</a>
-                    </p>
-
-                    <table class="table">
-                        <thead>
-                            <tr>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.Name)
-                                </th>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.Description)
-                                </th>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.Created)
-                                </th>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.StartDate)
-                                </th>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.EndDate)
-                                </th>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.ImageFormFile)
-                                </th>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.Archived)
-                                </th>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.Company)
-                                </th>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.Members)
-                                </th>
-                                @*<th>
-                                @Html.DisplayNameFor(model => model.Tickets)
-                                </th>*@
-                                <th>
-                                    @Html.DisplayNameFor(model => model.ProjectPriority)
-                                </th>
-                                <th></th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            @foreach (var item in Model)
-                            {
-                                <tr class="@(item.Archived ? "border border-2 border-danger" : "")">
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.Name)
-                                    </td>
-                                    <td>
-                                        @{
-                                            BTUser? projectManager = await _BTProjectService.GetProjectManagerAsync(item.Id);
-                                        }
-                                        
-                                        @if (projectManager is null && User.IsInRole(nameof(BTRoles.Admin)))
-                                        {
-                                            <a class="btn btn-sm btn-outline-info" asp-action="AssignProjectManager" asp-route-id="@item.Id">Assign PM</a>
-                                        }
-                                        else {
-                                            <text>@(projectManager?.FullName ?? "Unassigned")</text>
-                                            <a class="btn btn-sm btn-outline-success" asp-action="AssignProjectManager" asp-route-id="@item.Id">Manage PM</a>
-                                        }
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.Description)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.Created)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.StartDate)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.EndDate)
-                                    </td>
-                                    <td>
-                                        <img src="@_BTFileService.ConvertByteArrayToFile(item.ImageFileData!, item.ImageFileType!, (int)DefaultImg.ProjectImg)" class="img-fluid" style="max-height: 200px;" alt="project image" />
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.Archived)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.Company!.Name)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.Members)
-                                    </td>
-                                    @*<td>
-                                    @Html.DisplayFor(modelItem => item.Tickets!.Title)
-                                    </td>*@
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.ProjectPriority!.Name)
-                                    </td>
-                                    <td>
-                                        <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                                        <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                                        <a asp-action="Archive" asp-route-id="@item.Id">Archive</a> |
-                                        <a asp-action="AddMembers" asp-route-id="@item.Id">Add Member(s)</a> 
-                                    </td>
-                                </tr>
-                            }
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-        </div>
+<div class="page-header">
+    <div>
+        <h3>All Projects</h3>
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item">
+                    <a asp-action="Index" asp-controller="Home">Home</a>
+                </li>
+                <li class="breadcrumb-item">
+                    <a href="#">Projects</a>
+                </li>
+                <li class="breadcrumb-item active" aria-current="page">All Projects</li>
+            </ol>
+        </nav>
     </div>
 </div>
+
+<div class="row">
+    <div class="col-md-12">
+
+        <div class="card">
+            <div class="card-body">
+                <p>
+                    <a asp-action="Create" class="btn btn-primary rounded-pill">Create New</a>
+                </p>
+
+                <table id="projectsTable" class="table table-striped table-bordered">
+                    <thead>
+                        <tr>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Name)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Created)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.StartDate)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.EndDate)
+                            </th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var item in Model)
+                        {
+                            <tr>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Name)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Created)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.StartDate)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.EndDate)
+                                </td>
+                                <td>
+                                    <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-primary rounded-pill">Edit</a>
+                                    <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-primary rounded-pill">Details</a>
+                                    @* show Archive button if project is not archived *@
+                                    @if (item.Archived == false)
+                                    {
+                                        <a asp-action="Archive" asp-route-id="@item.Id" class="btn btn-danger rounded-pill">Archive</a>
+                                    }
+                                    @* Restore button if project is archived *@
+                                    else {
+                                        <a asp-action="Restore" asp-route-id="@item.Id" class="btn btn-success rounded-pill">Restore</a>
+                                    }
+                                    @{
+                                        BTUser? projectManager = await _BTProjectService.GetProjectManagerAsync(item.Id);
+                                    }
+                                    @if (projectManager is null && User.IsInRole(nameof(BTRoles.Admin)))
+                                    {
+                                        <a class="btn btn-sm btn-info rounded-pill mx-2" asp-action="AssignProjectManager" asp-route-id="@item.Id">Assign PM</a>
+                                    }
+                                    else
+                                    {
+                                        <a class="btn btn-sm btn-success rounded-pill" asp-action="AssignProjectManager" asp-route-id="@item.Id">@(projectManager?.FullName ?? "Unassigned")</a>
+                                    }
+                                    <a asp-action="AddMembers" asp-route-id="@item.Id" class="btn btn-primary rounded-pill">Add Member(s)</a>
+                                </td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
+    </div>
+</div>
+
+@section scripts {
+
+    <!-- DataTable -->
+    <script src="~/vendors/dataTable/datatables.min.js"></script>
+    <script src="~/assets/js/examples/datatable.js"></script>
+
+    <script>
+        $(document).ready(function () {
+            $('#projectsTable').DataTable();
+        });
+    </script>
+}
