--- a/Views/Projects/ArchivedProjects.cshtml
+++ b/Views/Projects/ArchivedProjects.cshtml
@@ -2,12 +2,113 @@
 @using BugTrackerMVC.Services.Interfaces
 @using BugTrackerMVC.Models.Enums
 @inject IBTFileService _BTFileService
+@inject IBTProjectService _BTProjectService
 
 @{
     ViewData["Title"] = "Archived Projects - Index";
 }
 
-<div class="container mt-5">
+<!-- DataTable -->
+<link rel="stylesheet" href="~/vendors/dataTable/datatables.min.css" type="text/css">
+
+<div class="page-header">
+    <div>
+        <h3>Archived Projects</h3>
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item">
+                    <a asp-action="Index" asp-controller="Home">Home</a>
+                </li>
+                <li class="breadcrumb-item">
+                    <a href="#">Projects</a>
+                </li>
+                <li class="breadcrumb-item active" aria-current="page">Archived Projects</li>
+            </ol>
+        </nav>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-md-12">
+
+        <div class="card">
+            <div class="card-body">
+
+                <table id="archivedProjectsTable" class="table table-striped table-bordered">
+                    <thead>
+                        <tr>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Name)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Created)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.StartDate)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.EndDate)
+                            </th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var item in Model)
+                        {
+                            <tr>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Name)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Created)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.StartDate)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.EndDate)
+                                </td>
+                                <td>
+                                    <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-primary rounded-pill">Edit</a>
+                                    <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-primary rounded-pill">Details</a>
+                                    <a asp-action="Restore" asp-route-id="@item.Id" class="btn btn-success rounded-pill">Restore</a>
+                                    @{
+                                        BTUser? projectManager = await _BTProjectService.GetProjectManagerAsync(item.Id);
+                                    }
+                                    @if (projectManager is null && User.IsInRole(nameof(BTRoles.Admin)))
+                                    {
+                                        <a class="btn btn-sm btn-info rounded-pill mx-2" asp-action="AssignProjectManager" asp-route-id="@item.Id">Assign PM</a>
+                                    }
+                                    else
+                                    {
+                                        <a class="btn btn-sm btn-success rounded-pill" asp-action="AssignProjectManager" asp-route-id="@item.Id">@(projectManager?.FullName ?? "Unassigned")</a>
+                                    }
+                                    <a asp-action="AddMembers" asp-route-id="@item.Id" class="btn btn-primary rounded-pill">Add Member(s)</a>
+                                </td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
+    </div>
+</div>
+
+@section scripts {
+
+    <!-- DataTable -->
+    <script src="~/vendors/dataTable/datatables.min.js"></script>
+    <script src="~/assets/js/examples/datatable.js"></script>
+
+    <script>
+        $(document).ready(function () {
+            $('#archivedProjectsTable').DataTable();
+        });
+    </script>
+}
+
+@*<div class="container mt-5">
     <div class="card mb-3">
         <div class="row g-0">
             <div class="col-md-12">
@@ -46,7 +147,7 @@
                                 </th>
                                 @*<th>
                                 @Html.DisplayNameFor(model => model.Tickets)
-                                </th>*@
+                                </th>
                                 <th>
                                     @Html.DisplayNameFor(model => model.ProjectPriority)
                                 </th>
@@ -83,10 +184,10 @@
                                     </td>
                                     @*<td>
                                         @Html.DisplayFor(modelItem => item.Members)
-                                    </td>*@
-                                    @*<td>
+                                    </td>
+                                    <td>
                                         @Html.DisplayFor(modelItem => item.Tickets!.Title)
-                                    </td>*@
+                                    </td>
                                     <td>
                                         @Html.DisplayFor(modelItem => item.ProjectPriority!.Name)
                                     </td>
@@ -101,4 +202,4 @@
             </div>
         </div>
     </div>
-</div>
+</div>*@
