--- a/Views/Projects/Create.cshtml
+++ b/Views/Projects/Create.cshtml
@@ -7,66 +7,73 @@
     ViewData["Title"] = "Create";
 }
 
-<div class="container mt-5">
+<div class="card">
+    <div class="card-body">
+        <form asp-action="Create" method="post" asp-controller="Projects" enctype="multipart/form-data">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" asp-for="Id" />
+            <input type="hidden" asp-for="CompanyId" />
+            <input type="hidden" asp-for="Created" />
+            <input type="hidden" asp-for="ImageFileData" />
+            <input type="hidden" asp-for="ImageFileType" />
+            <input type="hidden" asp-for="Archived" />
 
-    <div class="row">
-        <div class="col-md-4">
-            <form asp-action="Create" method="post" asp-controller="Projects" enctype="multipart/form-data">
-                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <input type="hidden" asp-for="Id" />
-                <input type="hidden" asp-for="CompanyId" />
-                <input type="hidden" asp-for="Created" />
-                <input type="hidden" asp-for="ImageFileData" />
-                <input type="hidden" asp-for="ImageFileType" />
-                <input type="hidden" asp-for="Archived" />
+            <h1>Create a Project</h1>
+            <hr />
 
-                <h1>Create a Project</h1>
-                <hr />
-
-                <!-- add image upload -->
-                <div class="form-group">
+            <div class="row">
+                <div class="col-12 col-lg-6">
+                    <!-- add image upload -->
+                    <div class="form-group">
                         <label asp-for="ImageFormFile" class="control-label">Upload an Image for the Project</label>
                         <img id="projectImage" class="img-fluid border rounded-3 m-2" style="max-height: 250px;" src="@_BTFileService.ConvertByteArrayToFile(Model.ImageFileData!, Model.ImageFileType!, (int)DefaultImg.ProjectImg)" alt="project image">
                         <input asp-for="ImageFormFile" type="file" class="form-control mt-3 pt-2" accept=".png,.jpg,.jpeg,.gif"
                                onchange="document.getElementById('projectImage').src=window.URL.createObjectURL(this.files[0])" />
+                    </div>
                 </div>
-                <div class="form-group">
-                    <label asp-for="Name" class="control-label"></label>
-                    <input asp-for="Name" class="form-control" />
-                    <span asp-validation-for="Name" class="text-danger"></span>
+                <div class="col-12 col-lg-6">
+                    <div class="form-group">
+                        <label asp-for="Name" class="control-label"></label>
+                        <input asp-for="Name" class="form-control" />
+                        <span asp-validation-for="Name" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Description" class="control-label"></label>
+                        <textarea asp-for="Description" rows=4 class="form-control"></textarea>
+                        <span asp-validation-for="Description" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="StartDate" class="control-label"></label>
+                        <input asp-for="StartDate" class="form-control" />
+                        <span asp-validation-for="StartDate" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="EndDate" class="control-label"></label>
+                        <input asp-for="EndDate" class="form-control" />
+                        <span asp-validation-for="EndDate" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="ProjectPriorityId" class="control-label">Priority</label>
+                        <select asp-for="ProjectPriorityId" class="form-control" asp-items="ViewBag.ProjectPriorityId"></select>
+                    </div>
+                    <div class="form-group">
+                        <div class="d-flex justify-content-end">
+                            <input type="submit" value="Create" class="btn btn-primary rounded-pill" />
+                        </div>
+                    </div>
                 </div>
-                <div class="form-group">
-                    <label asp-for="Description" class="control-label"></label>
-                    <input asp-for="Description" class="form-control" />
-                    <span asp-validation-for="Description" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="StartDate" class="control-label"></label>
-                    <input asp-for="StartDate" class="form-control" />
-                    <span asp-validation-for="StartDate" class="text-danger"></span>
-                </div>
-                <div class="">
-                    <label asp-for="EndDate" class="control-label"></label>
-                    <input asp-for="EndDate" class="form-control" />
-                    <span asp-validation-for="EndDate" class="text-danger"></span>
-                </div>
-                <div class="">
-                    <label asp-for="ProjectPriorityId" class="control-label">Priority</label>
-                    <select asp-for="ProjectPriorityId" class="form-control" asp-items="ViewBag.ProjectPriorityId"></select>
-                </div>
-                <div class="form-group">
-                    <input type="submit" value="Create" class="btn btn-primary rounded-pill my-2" />
-                </div>
-            </form>
+            </div>
+        </form>
+        <div>
+            <a asp-action="AllProjects" class="btn btn-primary rounded-pill">Back to List</a>
         </div>
     </div>
-
-    <div class="my-2">
-        <a asp-action="AllProjects">Back to List</a>
-    </div>
-
 </div>
 
+
+
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
