--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
 
-    <!-------------------------------------------- Gogi stylesheets start ------------------------------------------------->
+    <!-- ------------------------------------------ Gogi stylesheets start ----------------------------------------------- -->
     <!-- Favicon -->
     <link rel="shortcut icon" href="~/assets/media/image/favicon.png" />
 
@@ -30,7 +30,7 @@
 
     <!-- App css -->
     <link rel="stylesheet" href="~/assets/css/app.min.css" type="text/css">
-    <!-------------------------------------------- Gogi stylesheets end --------------------------------------------------->
+    <!-- ------------------------------------------ Gogi stylesheets end ------------------------------------------------- -->
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="/css/site.css" />
@@ -259,9 +259,10 @@
                 <!-- ./ Content body -->
             </div>
             <!-- ./ Content wrapper -->
-        </div
+        </div>
+        <!-- ./ Layout wrapper -->
 
-    <!--------------------- Gogi scripts start ------------------------------->
+    <!-- ------------------- Gogi scripts start ----------------------------- -->
     <!-- Main scripts -->
     <script src="../../vendors/bundle.js"></script>
 
@@ -283,10 +284,13 @@
     <!-- Javascript -->
     <script src="~/vendors/ckeditor5/ckeditor.js"></script>
 
-    <!--------------------- Gogi scripts end ------------------------------->
+    <!-- ------------------- Gogi scripts end ----------------------------- -->
 
     <!-- Sweet Alerts -->
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+    <!-- CKEditor 5-->
+    <script src="https://cdn.ckeditor.com/ckeditor5/35.4.0/classic/ckeditor.js"></script>
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
