--- a/Views/Shared/_LoginLayout.cshtml
+++ b/Views/Shared/_LoginLayout.cshtml
@@ -1,47 +1,56 @@
-﻿<div class="form-wrapper">
+﻿@using Microsoft.AspNetCore.Identity
+@inject SignInManager<BTUser> SignInManager
 
-    <!-- logo -->
-    <div id="logo">
-        <img src="../../assets/media/image/dark-logo.png" alt="image">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>@ViewData["Title"] - Insect Crusher</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+
+    <!-- Bootstrap Icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
+
+    <!-- ------------------------------------------ Gogi stylesheets start ----------------------------------------------- -->
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="~/assets/media/image/favicon.png" />
+
+    <!-- Main css -->
+    <link rel="stylesheet" href="~/vendors/bundle.css" type="text/css">
+
+    <!-- Google font -->
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+
+    <!-- Daterangepicker -->
+    <link rel="stylesheet" href="~/vendors/datepicker/daterangepicker.css" type="text/css">
+
+    <!-- DataTable -->
+    <link rel="stylesheet" href="~/vendors/dataTable/datatables.min.css" type="text/css">
+
+    <!-- App css -->
+    <link rel="stylesheet" href="~/assets/css/app.min.css" type="text/css">
+    <!-- ------------------------------------------ Gogi stylesheets end ------------------------------------------------- -->
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="/css/site.css" />
+</head>
+
+<body>
+    <!-- Content body -->
+    <div class="content-body">
+        <!-- Content -->
+        <div class="content ">
+
+            @RenderBody()
+
+        </div>
+        <!-- ./ Content -->
+
     </div>
-    <!-- ./ logo -->
+    <!-- ./ Content body -->
 
-
-    <h5>Sign in</h5>
-
-    <!-- form -->
-    <form>
-        <div class="form-group">
-            <input type="text" class="form-control" placeholder="Username or email" required autofocus>
-        </div>
-        <div class="form-group">
-            <input type="password" class="form-control" placeholder="Password" required>
-        </div>
-        <div class="form-group d-flex justify-content-between">
-            <div class="custom-control custom-checkbox">
-                <input type="checkbox" class="custom-control-input" checked="" id="customCheck1">
-                <label class="custom-control-label" for="customCheck1">Remember me</label>
-            </div>
-            <a href="recovery-password.html">Reset password</a>
-        </div>
-        <button class="btn btn-primary btn-block">Sign in</button>
-        <hr>
-        <p class="text-muted">Login with your social media account.</p>
-        <ul class="list-inline">
-            <li class="list-inline-item">
-                <a href="#" class="btn btn-floating btn-facebook">
-                    <i class="fa fa-facebook"></i>
-                </a>
-            </li>
-            <li class="list-inline-item">
-                <a href="#" class="btn btn-floating btn-google">
-                    <i class="fa fa-google"></i>
-                </a>
-            </li>
-        </ul>
-        <hr>
-        <p class="text-muted">Don't have an account?</p>
-        <a href="register.html" class="btn btn-outline-light btn-sm">Register now!</a>
-    </form>
-    <!-- ./ form -->
-</div>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
+    @await RenderSectionAsync("Scripts", required: false)
+</body>
+</html>
