--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -16,7 +16,7 @@
             <figure class="avatar avatar-sm">
                 <img src="@_BTFileService.ConvertByteArrayToFile(btUser.ImageFileData!, btUser.ImageFileType!, (int)DefaultImg.BTUserImg)" style="max-height: 75px;"
                  class="rounded-circle"
-                 alt="user iamge" />
+                 alt="user image" />
             </figure>
             <span class="ml-2 d-sm-inline d-none">@btUser.FullName</span>
         </a>
@@ -25,7 +25,7 @@
                 <figure class="avatar avatar-lg mb-3 border-0">
                     <img src="@_BTFileService.ConvertByteArrayToFile(btUser.ImageFileData!, btUser.ImageFileType!, (int)DefaultImg.BTUserImg)" style="max-height: 75px;"
                      class="rounded-circle"
-                     alt="user iamge" />
+                     alt="user image" />
                 </figure>
                 <h5 class="text-center">@btUser.FullName</h5>
                 <a asp-area="Identity" asp-page="/Account/Manage/Index" class="btn btn-outline-light btn-rounded">Manage Your Account</a>
