--- a/Views/Tickets/Create.cshtml
+++ b/Views/Tickets/Create.cshtml
@@ -4,73 +4,59 @@
     ViewData["Title"] = "Create";
 }
 
-<div class="container mt-5">
+    <div class="row">
+        <div class="col-md-4">
+            <form asp-action="Create" method="post" asp-controller="Tickets">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <input type="hidden" asp-for="Id" />
+                <input type="hidden" asp-for="Created" />
+                <input type="hidden" asp-for="Archived" />
+                <input type="hidden" asp-for="ArchivedByProject" />
+                <input type="hidden" asp-for="DeveloperUserId" />
+                <input type="hidden" asp-for="SubmitterUserId" />
 
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create" method="post" asp-controller="Tickets">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
-            <input type="hidden" asp-for="Created" />
-            <input type="hidden" asp-for="Archived" />
-            <input type="hidden" asp-for="ArchivedByProject" />
-            <input type="hidden" asp-for="DeveloperUserId" />
-            <input type="hidden" asp-for="SubmitterUserId" />
+                <h1>Create a Ticket</h1>
+                <hr />
 
-            <h1>Create a Ticket</h1>
-            <hr />
-
-            <div class="form-group">
-                <label asp-for="Title" class="control-label"></label>
-                <input asp-for="Title" class="form-control" />
-                <span asp-validation-for="Title" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
-                <span asp-validation-for="Description" class="text-danger"></span>
-            </div>
-            @*<div class="form-group">
-                <label asp-for="Updated" class="control-label"></label>
-                <input asp-for="Updated" class="form-control" />
-                <span asp-validation-for="Updated" class="text-danger"></span>
-            </div>*@
-            <div class="form-group">
-                <label asp-for="ProjectId" class="control-label">Project</label>
-                <select asp-for="ProjectId" class ="form-control" asp-items="ViewBag.ProjectId"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="TicketTypeId" class="control-label">Type</label>
-                <select asp-for="TicketTypeId" class ="form-control" asp-items="ViewBag.TicketTypeId"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="TicketStatusId" class="control-label">Status</label>
-                <select asp-for="TicketStatusId" class ="form-control" disabled asp-items="ViewBag.TicketStatusId"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="TicketPriorityId" class="control-label">Priority</label>
-                <select asp-for="TicketPriorityId" class ="form-control" asp-items="ViewBag.TicketPriorityId"></select>
-            </div>
-            @*<div class="form-group">
-                <label asp-for="DeveloperUserId" class="control-label"></label>
-                <select asp-for="DeveloperUserId" class ="form-control" asp-items="ViewBag.DeveloperUserId"></select>
-            </div>*@
-            @*<div class="form-group my-2">
-                <label asp-for="SubmitterUserId" class="control-label"></label>
-                <select asp-for="SubmitterUserId" class ="form-control" asp-items="ViewBag.SubmitterUserId"></select>
-            </div>*@
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary rounded-pill my-2" />
-            </div>
-        </form>
+                <div class="form-group">
+                    <label asp-for="Title" class="control-label"></label>
+                    <input asp-for="Title" class="form-control" />
+                    <span asp-validation-for="Title" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Description" class="control-label"></label>
+                    <input asp-for="Description" class="form-control" />
+                    <span asp-validation-for="Description" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="ProjectId" class="control-label">Project</label>
+                    <select asp-for="ProjectId" class ="form-control" asp-items="ViewBag.ProjectId"></select>
+                </div>
+                <div class="form-group">
+                    <label asp-for="TicketTypeId" class="control-label">Type</label>
+                    <select asp-for="TicketTypeId" class ="form-control" asp-items="ViewBag.TicketTypeId"></select>
+                </div>
+                <div class="form-group">
+                    <label asp-for="TicketStatusId" class="control-label">Status</label>
+                    <select asp-for="TicketStatusId" class ="form-control" disabled asp-items="ViewBag.TicketStatusId"></select>
+                </div>
+                <div class="form-group">
+                    <label asp-for="TicketPriorityId" class="control-label">Priority</label>
+                    <select asp-for="TicketPriorityId" class ="form-control" asp-items="ViewBag.TicketPriorityId"></select>
+                </div>
+                <div class="form-group">
+                    <div class="d-flex justify-content-end">
+                            <input type="submit" value="Create" class="btn btn-primary rounded-pill my-2" />
+                    </div>
+                </div>
+            </form>
+        </div>
     </div>
-</div>
 
-<div class="my-2">
-    <a asp-action="AllTickets">Back to List</a>
-</div>
+    <div class="my-2">
+        <a asp-action="AllTickets">Back to List</a>
+    </div>
 
-</div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
